tests/fail/ForEach.java
package fail;

public class ForEach {
	public static void main(String[] args) {
		int acc = 0;
		int[] array = {0,1,2,3,4};
		for (int i ; array) {
			acc = acc + i;
		}
	}

}
